Fixed bug with center aligned titles, and made it so that already read stories use a GET request instead of a POST request

--- a/web/static/css/digest.css
+++ b/web/static/css/digest.css
@@ -15,6 +15,7 @@
 
 .title {
   font-weight: 400;
+  text-align: left;
 }
 
 .is-read, .is-read {
@@ -37,6 +38,7 @@
 }
 
 /* --- Cache detection --- */
+
 #refresh {
   opacity: 0;
   position: absolute;
